# text_to_morse

./: README.md  pyproject.toml
text_to_morse/: __main__.py  constants.py  converter.py  exceptions.py  text_to_morse_converter.py
