[tool.poetry]
name = "text-to-morse"
version = "1.0.0"
description = "Console application for conversion of given text to morse code"
authors = ["mhanus2 <mhmartinhanus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
